--- a/frontend/src/search.css
+++ b/frontend/src/search.css
@@ -8,9 +8,18 @@ ul {
     list-style: none;
 }
 
-button{
-    width: 5%;
+h2 {
+    color: var(--accentgreen-color);
+    text-align: center;
+}
 
+button{
+    margin-right: 0;
+    margin-top: 1vh;
+    font-weight: bold;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 }
 
 
@@ -27,7 +36,6 @@ button{
     flex: 1;
     justify-content: space-evenly;
     text-align: center;
-
     display: flex;
     flex-direction: column;
 }
@@ -39,7 +47,17 @@ button{
     flex-direction: row;
     height: 1rem;
     gap: 1rem;
+    margin-top: 1vw;
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    white-space: nowrap;
 }
+
+.selectedItemContainer:hover{
+    text-decoration: line-through;
+    color: var(--accentpink-color);
+}
+
 
 .searchBarContainer{
     margin-top: 2%;
@@ -50,16 +68,31 @@ button{
     text-align: center;
 }
 
+.seedSearchInput{
+    background: var(--offwhite-color);
+    border-radius: 5px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 1.5em;
+    text-align: center;
+    font-family: "Quicksand", Verdana, sans-serif;
+}
+
 .searchBarResultContainer{
     display: flex;
     flex-direction: row;
     margin-top: 1%;
     margin-left: 1%;
     gap: 5%;
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    white-space: nowrap;
 }
 .searchBarResultContainer:hover{
-    background-color: var(--blue-color);
     color: black;
+    background-color: var(--blue-color);
+    border-radius: 3vw;
 }
 
 .searchBarResultItemPictureTrack{
@@ -71,9 +104,7 @@ button{
     width: 3rem;
     border-radius: 50%;
 }
-.searchBarResultItemTitle{
-    text-decoration: underline;
-}
+
 
 .seedSearchUnorderedList{
     
@@ -93,19 +124,21 @@ button{
 }
 
 .labelForLists{
-    text-decoration: underline;
+    font-size: 1.5em;
+    color: var(--blue-color);
+    font-weight: bold;
 }
 
 .clearAllButton{
-    background-color: gray;
-    color: white;
+    background-color: var(--blue-color);
 }
 
 .searchButton{
-    margin-top: 1%;
-    width: 10%;
+    background-color: var(--offwhite-color);
+    margin-top: 1.5vh;
     font-size: 1.5rem;
 }
+
 
 /* Design for Sliders */
 .sliderActive{
@@ -118,6 +151,9 @@ button{
     opacity: 1;
     -webkit-transition: .2s;
     transition: opacity .2s;
+
+    margin-top: 0.5vw;
+
 }
 
 .sliderNotActive{
@@ -130,6 +166,8 @@ button{
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+
+    margin-top: 0.5vw;
 }
   
 .sliderActive::-webkit-slider-thumb {
