--- a/frontend/src/logout.css
+++ b/frontend/src/logout.css
@@ -1,4 +1,4 @@
-form{
+body{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,21 +6,13 @@ form{
     gap: 10px;
 }
 
-label{
+h1{
+    margin-top: 50px;
     color: var(--offwhite-color);
     display: block;
 }
 
-input{
-    border-radius: 5px;
-    border: 0;
-}
-
-button{
-    margin-right: 0;
-    margin-top: 10px;
-}
 
 footer{
-    margin-top: 300px;
+    margin-top: 350px;
 }
