--- a/frontend/src/public/base.css
+++ b/frontend/src/public/base.css
@@ -85,7 +85,7 @@ footer a {
   color: var(--accentgreen-color);
   text-decoration: none;
   margin-bottom: 1vh;
-  font-size: 14p;
+  font-size: 14px;
 
 }
 
